adicionando validaçao e documentaçao na rota update user.
